append connections between celebrity and representative feature

--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -51,8 +51,9 @@
                                         <button class="btn btn-primary w-100" type="submit">Login</button>
                                     </div>
                                     <div class="col-12">
-                                        <p class="small mb-0" routerLink="/forget-password" routerLinkActive="active">
-                                            forget password? <a href="javascript:void(0)">Reset
+                                        <p class="small mb-0">
+                                            forget password? <a href="javascript:void(0)" routerLink="/forget-password"
+                                                routerLinkActive="active">Reset
                                                 password
                                             </a></p>
                                     </div>
