--- a/frontend/src/app/views/modules/accounts/accounts-save/accounts-save.component.html
+++ b/frontend/src/app/views/modules/accounts/accounts-save/accounts-save.component.html
@@ -1,7 +1,7 @@
 <div class="manager-view" style="height: inherit;">
     <div class="left-side" style="height: inherit; margin: -19px;">
         <mat-nav-list>
-            <a mat-list-item matTooltip="Back to list" [matTooltipPosition]="'after'" [routerLink]="'/app/accounts'">
+            <a mat-list-item matTooltip="Back to list" [matTooltipPosition]="'after'" [routerLink]="'/home/accounts'">
                 <mat-icon mat-list-icon>arrow_back</mat-icon>
             </a>
         </mat-nav-list>
