--- a/frontend/src/app/views/modules/celebrity/celebrity-save/celebrity-save.component.html
+++ b/frontend/src/app/views/modules/celebrity/celebrity-save/celebrity-save.component.html
@@ -1,1 +1,19 @@
-<p>celebrity-save works!</p>
+<div class="manager-view" style="height: inherit;">
+    <div class="left-side" style="height: inherit; margin: -19px;">
+        <mat-nav-list>
+            <a mat-list-item matTooltip="Back to list" [matTooltipPosition]="'after'" [routerLink]="'/home/celebrity'">
+                <mat-icon mat-list-icon>arrow_back</mat-icon>
+            </a>
+        </mat-nav-list>
+    </div>
+
+    <div class="right-side">
+        <mat-card>
+            <mat-card-content>
+                <app-celebrity-form [celebrity]="_celebrity" (onSave)="navigateToList($event)"
+                    (onCancellation)="navigateToList()">
+                </app-celebrity-form>
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
