--- a/frontend/src/app/views/modules/celebrity/celebrity.component.html
+++ b/frontend/src/app/views/modules/celebrity/celebrity.component.html
@@ -2,7 +2,8 @@
     <h1>Celebrity</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+            <li class="breadcrumb-item"><a href="javascript:void(0)" routerLink="/home/dashboard"
+                    routerLinkActive="active">Home</a></li>
             <li class="breadcrumb-item active">Celebrity</li>
         </ol>
     </nav>
@@ -14,19 +15,15 @@
         <div class="manager-view" style="height: inherit;">
             <div class="left-side" style="height: inherit;">
                 <mat-nav-list>
-                    <a mat-list-item matTooltip="Créer" [matTooltipPosition]="'after'" [routerLink]="['new']">
+                    <a mat-list-item matTooltip="Create" [matTooltipPosition]="'after'" [routerLink]="['new']">
                         <mat-icon mat-list-icon>add_circle_outline</mat-icon>
                     </a>
-                    <a mat-list-item matTooltip="Modifier" [matTooltipPosition]="'after'" (click)="edit()">
+                    <a mat-list-item matTooltip="Update" [matTooltipPosition]="'after'" (click)="edit()">
                         <mat-icon mat-list-icon>edit</mat-icon>
                     </a>
-                    <a mat-list-item matTooltip="Supprimer" [matTooltipPosition]="'after'" (click)="delete()">
+                    <a mat-list-item matTooltip="Delete" [matTooltipPosition]="'after'" (click)="delete()">
                         <mat-icon mat-list-icon>delete_forever</mat-icon>
                     </a>
-                    <!--a mat-list-item matTooltip="Reporter échéance" [matTooltipPosition]="'after'" 
-                        (click)="reportEcheance()">
-                        <mat-icon mat-list-icon>event</mat-icon>
-                    </a-->
                 </mat-nav-list>
             </div>
 
