--- a/frontend/src/app/views/modules/representative/representative-save/representative-save.component.html
+++ b/frontend/src/app/views/modules/representative/representative-save/representative-save.component.html
@@ -2,7 +2,7 @@
     <div class="left-side" style="height: inherit; margin: -19px;">
         <mat-nav-list>
             <a mat-list-item matTooltip="Back to list" [matTooltipPosition]="'after'"
-                [routerLink]="'/app/representatives'">
+                [routerLink]="'/home/representatives'">
                 <mat-icon mat-list-icon>arrow_back</mat-icon>
             </a>
         </mat-nav-list>
